# ids-peak-examples

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md
.github/: build-examples.yml
c/: .clang-format  README.md
cpp/: .clang-format  .clang-tidy  CMakeLists.txt  README.md
cpp/nion_point_cloud/: CMakeLists.txt  README.md  main.cpp
csharp/: .editorconfig  .gitignore  README.md
csharp/OpenCamera/: OpenCamera.csproj  OpenCameraFramework.csproj  Program.cs  README.md
csharp/Reconnect/: Program.cs  README.md  Reconnect.csproj  ReconnectFramework.csproj
csharp/open_camera/: OpenCamera.csproj  OpenCameraFramework.csproj  Program.cs  open_camera_csharp.csproj.in
python/: README.md  mypy.ini  ruff.toml
python/gui_kivy_pipeline/: README.md  camera.py  custom_widgets.py  main.py  requirements.txt
python/nion_point_cloud/: README.md  main.py  requirements.txt
